<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:weightSum="16"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include
        android:id="@+id/account_title"
        style="@style/TitleStyle"
        layout="@layout/e_title" />
    <LinearLayout
        android:weightSum="14"
        android:orientation="vertical"
        style="@style/body_wigth"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <LinearLayout
            android:id="@+id/employee_mode"
            android:layout_marginTop="@dimen/margin_top30"
            android:orientation="horizontal"
            android:layout_weight="1.5"
            android:background="#ffffff"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <TextView
                android:text="@string/account_id"
                style="@style/set_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:textColor="@android:color/darker_gray"
                android:layout_weight="1"
                android:gravity="right"
                android:layout_margin="10dp"
                android:id="@+id/activity_account_tv_id"
                style="@style/set_text"
                android:textSize="14dp"
                android:text="信息"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <TextView
            style="@style/line_thin"/>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_weight="1.5"
            android:layout_width="match_parent"
            android:background="#ffffff"
            android:layout_height="0dp">
            <TextView
                android:text="@string/account_nickname"
                style="@style/set_text"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <TextView
                android:textColor="@android:color/darker_gray"

                android:layout_margin="10dp"
                android:id="@+id/activity_account_tv_nickname"
                style="@style/set_text"
                android:layout_gravity="center_vertical|right"
                android:textSize="14dp"
                android:text="信息"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <TextView
            style="@style/line_thin"/>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_weight="1.5"
            android:background="#ffffff"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <TextView
                android:text="@string/account_phone"
                style="@style/set_text"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <TextView
                android:textColor="@android:color/darker_gray"
                android:layout_margin="10dp"
                android:textSize="14dp"
                android:id="@+id/activity_account_tv_phone"
                style="@style/set_text"
                android:layout_gravity="center_vertical|end"
                android:text="信息"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <TextView
            style="@style/line_thin"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"/>
        <TextView
            style="@style/line_thin"/>
        <LinearLayout
            android:weightSum="3"
            android:orientation="horizontal"
            android:layout_weight="1.5"
            android:layout_width="match_parent"
            android:background="#ffffff"
            android:layout_height="0dp">
            <TextView
                android:text="@string/account_withdraw"
                style="@style/set_text"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <TextView
                android:textColor="@android:color/darker_gray"
                android:id="@+id/activity_account_tv_withdraw"
                style="@style/set_text"
                android:text="信息"
                android:layout_weight="1"
                android:gravity="right"
                android:textSize="14dp"
                android:layout_margin="10dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <TextView
            style="@style/line_thin"/>

        <LinearLayout
            android:weightSum="3"
            android:orientation="horizontal"
            android:layout_weight="1.5"
            android:background="#ffffff"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <TextView
                android:text="@string/account_earn"
                style="@style/set_text"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <TextView
                android:textColor="@android:color/darker_gray"
                android:id="@+id/activity_account_tv_earn"
                style="@style/set_text"
                android:text="信息"
                android:layout_weight="1"
                android:textSize="14dp"
                android:gravity="right"
                android:layout_margin="10dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <TextView
            style="@style/line_thin"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"/>
        <TextView
            style="@style/line_thin"/>

        <LinearLayout
            android:weightSum="3"
            android:orientation="horizontal"
            android:layout_weight="1.5"
            android:layout_width="match_parent"
            android:background="#ffffff"
            android:layout_height="0dp">
            <TextView
                android:text="@string/account_count"
                style="@style/set_text"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <TextView
                android:textColor="@android:color/darker_gray"
                android:id="@+id/activity_account_tv_count"
                style="@style/set_text"
                android:text="信息"
                android:layout_weight="1"
                android:gravity="right"
                android:textSize="14dp"
                android:layout_margin="10dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <TextView
            style="@style/line_thin"/>

        <LinearLayout
            android:weightSum="3"
            android:orientation="horizontal"
            android:layout_weight="1.5"
            android:background="#ffffff"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <TextView
                android:text="@string/account_rate"
                style="@style/set_text"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <TextView
                android:textColor="@android:color/darker_gray"
                android:layout_weight="1"
                android:gravity="right"
                android:layout_margin="10dp"
                style="@style/set_text"
                android:textSize="14dp"
                android:id="@+id/activity_account_tv_rate"
                android:text="信息"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <TextView
            style="@style/line_thin"/>
    </LinearLayout>


</LinearLayout>
