<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:weightSum="16">

    <include
        android:id="@+id/set_title"
        style="@style/TitleStyle"
        layout="@layout/e_title" />

    <LinearLayout
        style="@style/body_wigth"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:weightSum="14">

        <LinearLayout
            android:id="@+id/activity_set_ly_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/select_click"
            android:orientation="horizontal"
            android:weightSum="4">

            <TextView
                style="@style/set_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="3"
                android:text="@string/set_account" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="right">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/into" />
            </RelativeLayout>
        </LinearLayout>

        <TextView style="@style/halving_line_e" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/no4_white"
            android:orientation="horizontal"
            android:weightSum="4">

            <TextView
                style="@style/set_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="3"
                android:text="@string/set_new_message" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="right">

                <ToggleButton
                    android:id="@+id/activity_set_tb_msg"
                    android:layout_width="50dp"
                    android:layout_height="24dp"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/drawable_set_msg"
                    android:checked="true"
                    android:text=""
                    android:textOff=""
                    android:textOn="" />
            </RelativeLayout>
        </LinearLayout>

        <TextView style="@style/halving_line_e" />

        <LinearLayout
            android:id="@+id/activity_set_ly_check"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/no4_white"
            android:orientation="horizontal">

            <TextView
                style="@style/set_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/set_check" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="right">

                <TextView
                    android:id="@+id/activity_set_tv_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="20dp"
                    android:text="1" />
            </RelativeLayout>
        </LinearLayout>

        <TextView style="@style/halving_line_e" />

        <LinearLayout
            android:id="@+id/activity_set_ly_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/select_click"
            android:orientation="horizontal"
            android:weightSum="4">

            <TextView
                style="@style/set_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="3"
                android:text="@string/set_about" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="right">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/indicator_bg_top" />
            </RelativeLayout>
        </LinearLayout>

        <TextView style="@style/halving_line_e" />

        <LinearLayout
            android:id="@+id/exit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/select_click"
            android:orientation="horizontal"
            android:weightSum="4">

            <TextView
                style="@style/set_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="3"
                android:text="@string/set_exit" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
