<?xml version="1.0" encoding="UTF-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#fffdf8"
    android:weightSum="16">

    <include
        android:id="@+id/share_title"
        style="@style/TitleStyle"
        layout="@layout/e_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        style="@style/body_wigth"
        android:orientation="vertical">

        <android.support.percent.PercentRelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:gravity="center_horizontal">

            <ImageView
                android:id="@+id/share_iv_code"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="70dp"
                app:layout_heightPercent="60%"
                android:layout_centerHorizontal="true"
                app:layout_widthPercent="60%" />
            <TextView
                android:id="@+id/hint_save_image"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="长按可保存二维码"
                app:layout_widthPercent="50%"
                android:gravity="center"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/share_iv_code"/>
            <TextView
                android:id="@+id/hint_share"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top20"
                android:text="长按可保存二维码"
                android:textSize="16dp"
                android:textColor="@color/orange"
                app:layout_widthPercent="80%"
                android:gravity="center"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/hint_save_image"/>
        </android.support.percent.PercentRelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2.5"
            android:gravity="center"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">
                <!-- 微信好友 -->
                <ImageButton
                    android:id="@+id/wechat_friends"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/btn_share_wechat" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/wechat_friends"
                    android:textColor="@color/text_hei"
                    android:textSize="12dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">
                <!-- 微信朋友圈 -->
                <ImageButton
                    android:id="@+id/wechat_moments"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_share_pyq" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/wechat_moments"
                    android:textColor="@color/text_hei"
                    android:textSize="12dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:visibility="gone">
                <!-- 微信收藏 -->
                <ImageButton
                    android:id="@+id/wechat_favorites"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/wechat_favorites" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/wechat_favorites" />
            </LinearLayout>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:visibility="gone"
            android:layout_weight="1.5">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="更  多  分  享"
                android:textSize="13dp"
                android:textColor="@color/write"
                android:gravity="center"
                android:layout_centerInParent="true"
                android:background="@drawable/adrawable_2_ib"/>
        </RelativeLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />
    </LinearLayout>
</LinearLayout>